--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "passport-linkedin-oauth2",
+	"name": "@qsxl/passport-linkedin-oauth2",
 	"version": "3.0.0-pre.1",
 	"description": "Passport for LinkedIn OAuth2 API v2",
 	"main": "./lib",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/QSXL/passport-linkedin-oauth2.git"
+		"url": "git+https://github.com/QSXL/passport-linkedin-oauth2.git"
 	},
 	"scripts": {
 		"test": "mocha -t 5000"
