--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@qsxl/passport-linkedin-oauth2",
-	"version": "3.0.0-pre.4",
+	"name": "@qsxlpublic/passport-linkedin-oauth2",
+	"version": "3.0.0-qsxl.1.0.0",
 	"description": "Passport for LinkedIn OAuth2 API v2",
 	"main": "./lib",
 	"types": "./index.d.ts",
